<resources>
    <string name="app_name">DMSolutionApp</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="continue_txt">Continue</string>

    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="speech_prompt">Say something&#8230;</string>
    <string name="speech_not_supported">To use this feature you should have the gloves. Peer your gloves with bluetooth and continue</string>
    <string name="register">You are registered successfully!</string>
    <string name="tap_on_mic">Tap on mic to speak</string>


    <string name="signupText">Sign up if you do not have an account</string>
    <string name="loginText">Sign in if you have an account</string>


    <string name="none_paired">No devices have been paired</string>
</resources>
